--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       build: ./fritz-collector
       container_name: fritz-collector
       restart: unless-stopped
+      network_mode: host
       environment:
         - INFLUX_TOKEN=${INFLUX_TOKEN}
         - INFLUX_BUCKET=${INFLUX_BUCKET}
